--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,12 +1,10 @@
 .button-login{
-   background: rgb(161, 56, 84);
-   color: rgba(255, 255, 255, 0.8);
    font-size: 16px;
    border: none;
    padding: 15px 0;
 }
 
 .button-login:hover{
-    background: rgba(161, 56, 84, 0.8);
+    background: #3893a177;
     cursor: pointer;
 }
