--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -10,11 +10,11 @@ label{
 }
 
 input{
-    color: rgba(255, 255, 255, 0.8);
     background: #353B50;
     border: none;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.8);;
+    border-bottom: 1px solid #ffffffcc;
     width: 100%;
     height: 30px;
     margin-bottom: 10px;
+    color: #ffffffcc;
 }
