--- a/src/components/Title/styles.css
+++ b/src/components/Title/styles.css
@@ -1,9 +1,9 @@
 .title{
-    color: rgba(255, 255, 255, 0.8);
+    color: #ffffffcc;
     font-family: serif;
     font-weight: 600;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.8);
+    border-bottom: 1px solid #ffffffcc;
     padding: 0 7px 5px;
     width: fit-content;
-    margin: 40px 0 60px;
+    margin: 40px 0 10px;
 }
