--- a/src/components/Subtitle/styles.css
+++ b/src/components/Subtitle/styles.css
@@ -1,8 +1,9 @@
 .subtitle{
     color: rgba(255, 255, 255, 0.8);
-    font-family: serif;
-    font-weight: 600;
+    font-family: sans-serif;
+    font-weight: 200;
+    font-size: 14px;
     padding: 0 7px 5px;
     width: fit-content;
-    margin: 20px 0 60px;
+    margin: 20px 0 20px;
 }
