--- a/src/components/Title/styles.css
+++ b/src/components/Title/styles.css
@@ -1,9 +1,24 @@
-.title{
-    color: #ffffffcc;
-    font-family: serif;
-    font-weight: 600;
+.title {
+    background-image: linear-gradient(90deg, rgb(216, 161, 252, 1), rgba(144, 236, 224, 0.849), rgb(225, 250, 163));
+    animation: bg-animation 13s infinite alternate;
+    background-clip: text;
+    color: transparent;
+    background-size: 500%;
+    font-family: sans-serif;
+    font-weight: bolder;
     border-bottom: 1px solid #ffffffcc;
     padding: 0 7px 5px;
     width: fit-content;
     margin: 40px 0 10px;
+}
+
+
+@keyframes bg-animation {
+    0% {
+        background-position: left;
+    }
+
+    100% {
+        background-position: right;
+    }
 }
