--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -11,10 +11,10 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background: #353B50;
+    background: #262626;
     max-width: 500px;
     padding: 40px;
-    border-radius: 2px;
+    border-radius: 8px;
 
 }
 
@@ -22,4 +22,9 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
+}
+
+ul{
+    list-style-type: none;
+    padding: 0;
 }
