--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,16 @@
-body {
+html {
   margin: 0;
-  background: #454D6B;
+  background-image: linear-gradient(90deg, #d8a1fc, #90ece0d8, #e1faa3);
+  animation: bg-animation 13s infinite alternate;
+  background-size: 500%;
+
+}
+
+@keyframes bg-animation {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
 }
