--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,9 +1,12 @@
-.navbar{
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.align-btn{
     display: flex;
     flex-direction: row;
     align-content: center;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 10px 20px;
-    gap: 10px;
+    justify-content: center;
 }
